<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/movie"
        android:textSize="@dimen/_23sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/find_your_movies"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@id/ti_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:hintEnabled="false"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toTopOf="@id/tv_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title">

        <com.google.android.material.textfield.TextInputEditText
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_here" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/categories"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sv_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_search" />

    <HorizontalScrollView
        android:id="@+id/sv_chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/rv_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_categories">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_choice_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:checkedChip="@id/chip_top_rated"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/top_rated" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/upcoming" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/now_playing" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/popular" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_chip"
        tools:listitem="@layout/item_movie_tv" />

    <ProgressBar
        android:id="@+id/pb_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rv_movie"
        app:layout_constraintStart_toStartOf="@id/rv_movie"
        app:layout_constraintEnd_toEndOf="@id/rv_movie"
        app:layout_constraintBottom_toBottomOf="@id/rv_movie"/>

</androidx.constraintlayout.widget.ConstraintLayout>