<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_reviewer"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_rating"
        app:layout_constraintEnd_toStartOf="@id/tv_reviewer_name"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/average_rating"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_reviewer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_reviewer"/>

    <TextView
        android:id="@+id/tv_reviewer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reviewer_name"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_reviewer"
        app:layout_constraintBottom_toTopOf="@id/tv_review"/>

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/iv_reviewer"
        app:layout_constraintTop_toBottomOf="@id/tv_reviewer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>